force-app/main/default/objects/Message_Center__c/Message_Center__c.object-meta.xml
<CustomObject>
    <description>Using this object to populate messages on partner screen based on their creteria</description>
    <label>Message Center</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Message Center</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Centers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>