force-app/main/default/objects/Message_Center__c/fields/Active_From__c.field-meta.xml
<CustomField>
    <fullName>Active_From__c</fullName>
    <description>hold activation date for message</description>
    <inlineHelpText>Please select activation Date</inlineHelpText>
    <label>Active From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>