force-app/main/default/objects/Message_Center__c/fields/Active_To__c.field-meta.xml
<CustomField>
    <fullName>Active_To__c</fullName>
    <description>Till when this message should be active</description>
    <inlineHelpText>Please enter active to  date</inlineHelpText>
    <label>Active To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>