force-app/main/default/objects/Message_Center__c/fields/Description_box_1__c.field-meta.xml
<CustomField>
    <fullName>Description_box_1__c</fullName>
    <description>Holding message description  1 based on criteria</description>
    <inlineHelpText>Please Enter Message</inlineHelpText>
    <label>Description box 1</label>
    <length>256</length>
    <type>Html</type>
</CustomField>