force-app/main/default/objects/Message_Center__c/fields/Description_box_2__c.field-meta.xml
<CustomField>
    <fullName>Description_box_2__c</fullName>
    <description>This field is using in message center on partner portal</description>
    <label>Description box 2</label>
    <length>256</length>
    <type>Html</type>
</CustomField>