force-app/main/default/objects/Message_Center__c/fields/Description_box_3__c.field-meta.xml
<CustomField>
    <fullName>Description_box_3__c</fullName>
    <description>This field is using in message center on partner portal</description>
    <inlineHelpText>Please add message or Url for partner portal</inlineHelpText>
    <label>Description box 3</label>
    <length>256</length>
    <type>Html</type>
</CustomField>