force-app/main/default/objects/Message_Center__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>User for maintain criteria</description>
    <inlineHelpText>Please select  at-least  one</inlineHelpText>
    <label>Industry</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>FINANCIAL:BANKING CFI</fullName>
            </value>
            <value>
                <fullName>FINANCIAL:BANKING MAJOR</fullName>
            </value>
            <value>
                <fullName>FINANCIAL:OTHER</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY:QSR</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY:T&amp;E</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY:TSR</fullName>
            </value>
            <value>
                <fullName>RETAIL:CFR</fullName>
            </value>
            <value>
                <fullName>RETAIL:DSR</fullName>
            </value>
            <value>
                <fullName>RETAIL:FDMM</fullName>
            </value>
            <value>
                <fullName>T&amp;T:TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>T&amp;T:TELECOM</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>