force-app/main/default/objects/Message_Center__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>set true for active data</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>