force-app/main/default/objects/Message_Center__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Help to maintain logic based on criteria</description>
    <inlineHelpText>Please select at-least one</inlineHelpText>
    <label>Region</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>CLA BRAZIL</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>EUROPE EXC RUSSIA</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDIA &amp; SEA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>NAMER CFI</fullName>
            </value>
            <value>
                <fullName>NAMER DIRECT</fullName>
            </value>
            <value>
                <fullName>NAMER MAJORS</fullName>
            </value>
            <value>
                <fullName>NAMER SMB</fullName>
            </value>
            <value>
                <fullName>NORTH ASIA</fullName>
            </value>
            <value>
                <fullName>NORTH ASIA &amp; SPA</fullName>
            </value>
            <value>
                <fullName>SAPAC</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>