force-app/main/default/objects/Message_Center__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>Use to show messages for  partner community</description>
    <inlineHelpText>Please select at-least one</inlineHelpText>
    <label>Tier Level</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
                <isActive>false</isActive>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Elite</fullName>
                <isActive>false</isActive>
                <label>Elite</label>
            </value>
            <value>
                <fullName>Premier</fullName>
                <isActive>false</isActive>
                <label>Premier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>