force-app/main/default/objects/Message_Center__c/validationRules/Message_Description_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_Description_1</fullName>
    <active>true</active>
    <description>Message description 1 field should not be blank.</description>
    <errorConditionFormula>LEN( Description_box_1__c ) = 0</errorConditionFormula>
    <errorMessage>Description box 1 should not be blank</errorMessage>
</ValidationRule>